--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,11 @@
--start objectifying basic commands
--make a 3x3 grid to "move" around in based on commands
--ensure that commands that aren't publicly visible only go to the person that issued the command (ie look, examine, gear, etc)
+-start objectifying basic commands - In Progress
+-make a 3x3 grid to "move" around in based on commands -WIP
+-ensure that commands that aren't publicly visible only go to the person that issued the command (ie look, examine, gear, etc) -In Progress
+
+-Build class for rooms. Need to have storage for items and players and NPCs
+-Make account creation page. Require an account before being able to the join the rooms
+    --One account with a live player per user
+-Rework index.html to have links to everything, remove input form for chat room. Need to just be able to start playing
+-Add some basic UI stuff. Health, location, MAYBE an inventory sidebar
+
+
