--- a/TODO.txt
+++ b/TODO.txt
@@ -7,5 +7,7 @@
     --One account with a live player per user
 -Rework index.html to have links to everything, remove input form for chat room. Need to just be able to start playing
 -Add some basic UI stuff. Health, location, MAYBE an inventory sidebar
+-Figure out why TF pressing enter doesn't enter your input -COMPLETED
+-Tackle command parsing on the JavaScript end
 
 
