small rework for opening files

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,15 +2,15 @@
 Game Engine:
     ->start objectifying basic commands -In Progress
         --Rework socketio events to cut down on clutter -In Progress
-    ->make a 3x3 grid to "move" around in based on commands -In Progress
+    ->make a 3x3 grid to "move" around in based on commands -COMPLETED
     ->ensure that commands that aren't publicly visible only go to the person that issued the command (ie look, examine, gear, etc) -COMPLETED
     ->Build classes for all entities -In Progress
-        --Rooms
+        --Rooms -In Progress
         --Players
         --NPCs
     ->Methods for entities
     ->Tackle command parsing on the JavaScript end
-        --Consider using an parser module
+        --New method, handle parsing on the back end -In Progress
 
 Website:
     ->Make account creation page. Require an account before being able to the join the rooms
