--- a/TODO.txt
+++ b/TODO.txt
@@ -6,15 +6,15 @@ Game Engine:
     ->ensure that commands that aren't publicly visible only go to the person that issued the command (ie look, examine, gear, etc) -COMPLETED
     ->Build classes for all entities -In Progress
         --Rooms -In Progress
-        --Players
+        --Players -In Progress
         --NPCs
     ->Methods for entities
     ->Tackle command parsing on the JavaScript end
         --New method, handle parsing on the back end -In Progress
 
 Website:
-    ->Make account creation page. Require an account before being able to the join the rooms
-        --One account with a live player per user
+    ->Make account creation page. Require an account before being able to the join the rooms -In Progress
+        --One account with a live player per user -In Progress
     ->Rework index.html to have links to everything, remove input form for chat room. Need to just be able to start playing
     ->Redo CSS styling
 
